# demo

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: Android.mk  Application.mk  CMakeLists.txt  build.gradle  phoneproxy.jks
app/src/androidTest/java/com/yunfeng/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/yunfeng/demo/: IMyAidlInterface.aidl
app/src/main/aidl/com/yunfeng/demo/data/: Data.aidl
app/src/main/assets/shaders/: square.vert  triangle.vert
app/src/main/cpp/Rx/: CMakeLists.txt  native_lib.cpp
app/src/main/cpp/common/: AndroidCrashDump.h  CMakeLists.txt  IRenderer.h  Singleton.h
app/src/main/cpp/common/freeimage/: Android.mk  CMakeLists.txt
app/src/main/cpp/common/freetype/: CMakeLists.txt
app/src/main/cpp/common/googlebreakpad/: CMakeLists.txt
app/src/main/cpp/common/googlebreakpad/android/google_breakpad/: Android.mk  Application.mk
app/src/main/cpp/common/ndk_helper/: GLContext.cpp  JNIHelper.cpp  JNIHelper.h  gestureDetector.h
app/src/main/cpp/common/ois/: CMakeLists.txt
app/src/main/cpp/fmod/: CMakeLists.txt  FmodSound.cpp  FmodSound.h  common_platform.cpp  fmod.cpp
app/src/main/cpp/nativecall/: CMakeLists.txt  updater.cpp
app/src/main/cpp/nativefork/: CMakeLists.txt  nativefork.cpp
app/src/main/cpp/nativegui/: Android.mk  CMakeLists.txt  VulkanAndroid.h  com_yunfeng_gui_JNILib.cpp
app/src/main/cpp/nativegui/renderer/: GLESRenderer.cpp  GLESRenderer.h  IGeometry.cpp  IGeometry.h  MatrixStat.cpp  MatrixStat.h  ProgrameId.h  Renderer.cpp  Renderer.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  VulkanRenderer.cpp  VulkanRenderer.h  readme.txt  utils.cpp  utils.h
app/src/main/cpp/opensles/: CMakeLists.txt  native-audio-jni.c
app/src/main/cpp/sensor/: CMakeLists.txt  com_yunfeng_common_jni_JNILib.cpp  macros.h
app/src/main/cpp/sensor/renderer/: Renderer.h
app/src/main/cpp/sensor/sensor/: Sensor.cpp  TeapotNativeActivity.cpp  TeapotRenderer.cpp  TeapotRenderer.h
app/src/main/cpp/sensor/utils/: CHelper.cpp
app/src/main/cpp/vulkan/: CMakeLists.txt  NativeAndroid.cpp  VulkanRenderer.cpp  VulkanRenderer.h
app/src/main/java/com/yunfeng/: ActivityListAdapter.java  App.java  Const.java  DividerItemDecoration.java  FloatService.java  MainActivity.java  MyContext.java  PermissionRequest.java  RecyclerViewAdapter.java  Res.java  ResUtil.java  SkinFactoryTwo.java
app/src/main/java/com/yunfeng/aop/: CGLibDynamicProxy.java  DexMakeDynamicProxy.java  Greeting.java  GreetingImpl.java  JDKDynamicProxy.java  MainActivity.java
app/src/main/java/com/yunfeng/common/: PackageInfo.java
app/src/main/java/com/yunfeng/ddd/: MainActivity.java
app/src/main/java/com/yunfeng/demo/: LoginActivity.java  MainActivity.java  MainTabActivity.java  ShareActivity.java
app/src/main/java/com/yunfeng/floatwindow/: FloatActivity.java  FloatService.java  FloatView.java
app/src/main/java/com/yunfeng/fmod/: FModeActivity.java  FmodActivity.java
app/src/main/java/com/yunfeng/gui/: GuiMainActivity.java  MainActivity.java
app/src/main/java/com/yunfeng/guinative/: GuiNativeMainActivity.java  JNILib.java  MyGLSurfaceView.java
app/src/main/java/com/yunfeng/mvc/: Book.java  BookActivity.java  BookAdapter.java  BookController.java  BookModel.java  PackageInfo.java
app/src/main/java/com/yunfeng/mvp/: MainActivity.java  MvpCallback.java  MvpModel.java  MvpPresenter.java  MvpView.java  PackageInfo.java
app/src/main/java/com/yunfeng/mvvm/: MainActivity.java  MvvmAdapter.java  ObservableListAdapter.java  PackageInfo.java  Student.java  StudentAdapter.java  StudentViewModle.java
app/src/main/java/com/yunfeng/nativecall/: MainActivity.java  MyGLSurfaceView.java  MyRenderer.java  PackageInfo.java
app/src/main/java/com/yunfeng/nativefork/: MainActivity.java
app/src/main/java/com/yunfeng/opensles/: MainActivity.java
app/src/main/java/com/yunfeng/retrofit2/: Contributor.java  MainActivity.java  Retrofit2Adapter.java
app/src/main/java/com/yunfeng/rxcpp/: MainActivity.java
app/src/main/java/com/yunfeng/sensor/: MainActivity.java
app/src/main/java/com/yunfeng/vulkan/: VulkanActivity.java
app/src/main/jni/: Clazz.cpp  Clazz.h  app.cpp  app.h  com_yunfeng_common_jni_JNILib.cpp  com_yunfeng_common_jni_JNILib.h  updater.cpp
app/src/main/jni/gui/: com_yunfeng_gui_MainActivity.cpp  com_yunfeng_gui_MainActivity.h
app/src/main/jni/renderer/: Renderer.cpp  Singleton.cpp
app/src/main/jni/sensor/: Sensor.cpp  Sensor.h  TeapotNativeActivity.cpp  TeapotRenderer.cpp  TeapotRenderer.h
app/src/main/jni/utils/: CHelper.cpp  CHelper.h
app/src/main/res/color/: sc.xml
app/src/main/res/drawable/: am.xml
app/src/main/res/layout/: actitvitys_adapter.xml  activity_aop.xml  activity_fmod.xml  activity_list.xml  activity_login.xml  activity_main.xml  activity_main_ddd.xml  activity_main_tab.xml  activity_mvp.xml  activity_mvvm.xml  activity_nativeaudio.xml  activity_retrofit2.xml  activity_share.xml  demo_float_window_layout.xml  float_layout.xml  fragment_main_dummy.xml  fragment_main_empty.xml  fragment_main_me.xml  interval_timer.xml  mvc_adapter.xml  mvvm_adapter.xml  retrofit2_list_item.xml  ui_button.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/yunfeng/demo/: ExampleUnitTest.java
gui/: Application.mk  CMakeLists.txt  build.gradle
gui/freeimage/: CMakeLists.txt
gui/freeimage/Source/LibRawLite/internal/: dcraw_common.cpp
gui/src/androidTest/java/com/yunfeng/gui/: ExampleInstrumentedTest.java
gui/src/main/: AndroidManifest.xml
gui/src/main/assets/shaders/: triangle.frag  triangle.vert
gui/src/main/cpp/: com_yunfeng_gui_JNILib.cpp  com_yunfeng_gui_JNILib.h
gui/src/main/cpp/renderer/: ProgrameId.h  Renderer.cpp  Renderer.h  Square.cpp  Triangle.cpp  Triangle.h  utils.cpp  utils.h  vecmath.cpp  vecmath.h
gui/src/main/java/com/yunfeng/gui/: GuiMainActivity.java  JNILib.java  MainActivity.java  MyGLSurfaceView.java
gui/src/test/java/com/yunfeng/gui/: ExampleUnitTest.java
(+113 files in other folders)
