cmake_minimum_required(VERSION 3.4.1)

INCLUDE_DIRECTORIES(src/main/cpp/common)
INCLUDE_DIRECTORIES(src/main/cpp/common/googlebreakpad)

ADD_SUBDIRECTORY(src/main/cpp/common)
ADD_SUBDIRECTORY(src/main/cpp/common/googlebreakpad)
ADD_SUBDIRECTORY(src/main/cpp/common/freeimage)
ADD_SUBDIRECTORY(src/main/cpp/common/zlib)
ADD_SUBDIRECTORY(src/main/cpp/sensor)
ADD_SUBDIRECTORY(src/main/cpp/opensles)
ADD_SUBDIRECTORY(src/main/cpp/nativegui)
ADD_SUBDIRECTORY(src/main/cpp/nativecall)
ADD_SUBDIRECTORY(src/main/cpp/nativefork)
ADD_SUBDIRECTORY(src/main/cpp/vulkan)
